# llmao

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: extract.rs
src/: chat.rs  extract.rs  lib.rs  params.rs
