[package]
name = "llmao"
description = "Large Language Model API Ops, an abstraction layer for interfacing with different LLM providers"
version = "0.0.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/nuttycream/llmao"
repository = "https://github.com/nuttycream/llmao"
keywords = ["llm", "ai"]

[dev-dependencies]
ureq = "3.1.4"
