[package]
name = "llmao"
description = "Large Language Model API Ops, an abstraction layer for interfacing with different LLM providers"
version = "0.0.2"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/nuttycream/llmao"
repository = "https://github.com/nuttycream/llmao"
keywords = ["llm", "ai"]

[dev-dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3.1.4", features = ["json"] }
